--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ndn-js",
-  "version": "0.19.0",
+  "name": "ndn-direct-ind",
+  "version": "1.0",
   "description": "A JavaScript client library for Named Data Networking",
   "main": "index.js",
   "directories": {
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/named-data/ndn-js"
+    "url": "https://github.com/operantnetworks/ndn-direct-ind"
   },
   "keywords": [
     "NDN"
@@ -26,7 +26,7 @@
   "author": "UCLA",
   "license": "LGPL-3.0+",
   "bugs": {
-    "url": "https://github.com/named-data/ndn-js/issues"
+    "url": "https://github.com/operantnetworks/ndn-direct-ind/issues"
   },
   "dependencies": {
     "jsbn": "*",
