--- a/.github/workflows/shiftleft.yml
+++ b/.github/workflows/shiftleft.yml
@@ -40,7 +40,14 @@ jobs:
     #  run: |
     #    curl https://cdn.shiftleft.io/download/sl > ${GITHUB_WORKSPACE}/sl && chmod a+rx ${GITHUB_WORKSPACE}/sl
     #- name: Validate Build Rules
-    #  run: sleep 10s && ${GITHUB_WORKSPACE}/sl check-analysis --app ndn-direct-ind --source 'tag.branch=${{ github.event.pull_request.base.ref }}' --target "tag.branch=${{ github.head_ref || steps.extract_branch.outputs.branch }}"
+    #  run: ${GITHUB_WORKSPACE}/sl check-analysis --app ndn-direct-ind \
+    #       --source 'tag.branch=${{ github.event.pull_request.base.ref }}' \
+    #       --target "tag.branch=${{ github.head_ref || steps.extract_branch.outputs.branch }}" \
+    #       --report \
+    #       --github-pr-number=${{github.event.number}} \
+    #       --github-pr-user=${{ github.repository_owner }} \
+    #       --github-pr-repo=${{ github.event.repository.name }} \
+    #       --github-token=${{ secrets.GITHUB_TOKEN }}
     #  env:
         #SHIFTLEFT_ACCESS_TOKEN: ${{ secrets.SHIFTLEFT_ACCESS_TOKEN }}
         
