--- a/.github/workflows/shiftleft.yml
+++ b/.github/workflows/shiftleft.yml
@@ -17,7 +17,7 @@ jobs:
         curl https://cdn.shiftleft.io/download/sl > ${GITHUB_WORKSPACE}/sl && chmod a+rx ${GITHUB_WORKSPACE}/sl
     # ShiftLeft requires Java 1.8. Post the package step override the version
     - name: Setup Java JDK
-      uses: actions/setup-java@v1.3.0
+      uses: actions/setup-java@v1.4.3
       with:
         java-version: 1.8
     - name: Extract branch name
@@ -40,7 +40,14 @@ jobs:
     #  run: |
     #    curl https://cdn.shiftleft.io/download/sl > ${GITHUB_WORKSPACE}/sl && chmod a+rx ${GITHUB_WORKSPACE}/sl
     #- name: Validate Build Rules
-    #  run: sleep 10s && ${GITHUB_WORKSPACE}/sl check-analysis --app ndn-direct-ind --source 'tag.branch=${{ github.event.pull_request.base.ref }}' --target "tag.branch=${{ github.head_ref || steps.extract_branch.outputs.branch }}"
+    #  run: ${GITHUB_WORKSPACE}/sl check-analysis --app ndn-direct-ind \
+    #       --source 'tag.branch=${{ github.event.pull_request.base.ref }}' \
+    #       --target "tag.branch=${{ github.head_ref || steps.extract_branch.outputs.branch }}" \
+    #       --report \
+    #       --github-pr-number=${{github.event.number}} \
+    #       --github-pr-user=${{ github.repository_owner }} \
+    #       --github-pr-repo=${{ github.event.repository.name }} \
+    #       --github-token=${{ secrets.GITHUB_TOKEN }}
     #  env:
         #SHIFTLEFT_ACCESS_TOKEN: ${{ secrets.SHIFTLEFT_ACCESS_TOKEN }}
         
